I changed my mind again. And changed some fonts. But as far as the size goes, the issue is more how close you sit to the screen. Sitting a better distance away makes the larger font size a lot better. Sitting up close makes it seem too close, which is probably because it IS too close. Whatever. Need to actually go ahead and properly style the rest of the stuff now!

--- a/app/assets/scss/foundation/components/_type.scss
+++ b/app/assets/scss/foundation/components/_type.scss
@@ -7,8 +7,8 @@
 $include-html-type-classes: $include-html-classes !default;
 
 // We use these to control header font styles
-$header-font-family: "Muli", sans-serif !default;
-$header-font-weight: 200 !default;
+$header-font-family: "Open Sans", sans-serif !default;
+$header-font-weight: 300 !default;
 $header-font-style: $font-weight-normal !default;
 $header-font-color: $jet !default;
 $header-line-height: 1.4 !default;
@@ -58,7 +58,7 @@ $paragraph-text-rendering: optimizeLegibility !default;
 
 // We use these to style <code> tags
 $code-color: $oil !default;
-$code-font-family: "Source Code Pro", Consolas, 'Liberation Mono', Courier, monospace !default;
+$code-font-family: "Inconsolata", Consolas, 'Liberation Mono', Courier, monospace !default;
 $code-font-weight: $font-weight-normal !default;
 $code-font-size: 70%;
 $code-background-color: scale-color($secondary-color, $lightness: 70%) !default;
